--- a/app/src/main/res/layout/activity_business.xml
+++ b/app/src/main/res/layout/activity_business.xml
@@ -29,10 +29,14 @@
             android:layout_alignBaseline="@id/textseleccio"
             android:layout_toRightOf="@id/textseleccio"
             android:entries="@array/sectors"
-
             >
 
-        </Spinner>
-    </RelativeLayout>
 
+        </Spinner>
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/ImatgeRelleno"
+            android:src=""/>
+    </RelativeLayout>
 </FrameLayout>
