--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,7 +19,8 @@
             android:layout_height="wrap_content"
             android:layout_weight="0.19"
             android:src="@drawable/restaurants"
-            android:layout_margin="10dp"/>
+            android:layout_margin="10dp"
+            />
 
         <ImageView
             android:id="@+id/imageView2"
