chavales e añadido una imagen, cuidado

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,7 +28,9 @@
             android:layout_height="wrap_content"
             android:layout_weight="0.19"
             app:srcCompat="@drawable/business"
-            android:layout_margin="10dp"/>
+            android:layout_margin="10dp"
+            />
+
     </LinearLayout>
 
 
