--- a/app/src/main/res/layout/activity_business__inmobiliaries.xml
+++ b/app/src/main/res/layout/activity_business__inmobiliaries.xml
@@ -1,9 +1,185 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.adri.projectegithub.Business.Business_Inmobiliaries">
+    tools:context="com.example.adri.projectegithub.Business.Business_Botigues">
 
-</android.support.constraint.ConstraintLayout>
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/Back"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/TitolInmobiliaries"
+                android:text="INMOBILIARIES"
+                android:layout_toRightOf="@+id/Back"
+                android:layout_marginTop="8dp"
+                android:layout_marginLeft="50dp"
+
+                android:textSize="30dp"/>
+            <ImageView
+                android:layout_below="@+id/Back"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:id="@+id/ImgInmo1"
+                android:layout_marginTop="20dp"
+                android:layout_marginLeft="20dp"
+                />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/LinkPrimeraInmo"
+                android:text="Barbany Granollers"
+
+                android:layout_marginBottom="30dp"
+                android:layout_alignBottom="@+id/ImgInmo1"
+                android:layout_toRightOf="@+id/ImgInmo1"
+                android:layout_toEndOf="@+id/ImgInmo1"
+                android:layout_marginLeft="28dp"
+                android:layout_marginStart="28dp" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/TlfInmo1"
+                android:text="93-879-28-16"
+
+                android:layout_toRightOf="@+id/LinkPrimeraInmo"
+                android:layout_alignBottom="@+id/LinkPrimeraInmo"
+
+                android:layout_marginLeft="20dp"
+                />
+            <ImageView
+                android:layout_below="@+id/ImgInmo1"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:id="@+id/ImgInmo2"
+                android:layout_marginTop="10dp"
+                android:layout_marginLeft="20dp"
+                />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/LinkSegonaInmo"
+                android:text="El Món"
+
+                android:layout_marginBottom="30dp"
+                android:layout_above="@+id/ImgInmo3"
+                android:layout_alignLeft="@+id/LinkPrimeraInmo"
+                android:layout_alignStart="@+id/LinkPrimeraInmo" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/TlfInmo2"
+                android:text="93-860-64-61"
+
+                android:layout_alignBaseline="@+id/LinkSegonaInmo"
+                android:layout_alignBottom="@+id/LinkSegonaInmo"
+                android:layout_alignLeft="@+id/TlfInmo1"
+                android:layout_alignStart="@+id/TlfInmo1" />
+            <ImageView
+                android:layout_below="@+id/ImgInmo2"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:id="@+id/ImgInmo3"
+                android:layout_marginTop="20dp"
+                android:layout_marginLeft="20dp"
+                />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/LinkTerceraInmo"
+                android:text="Botiga La Perla"
+
+                android:layout_marginBottom="30dp"
+                android:layout_alignBottom="@+id/ImgInmo3"
+                android:layout_toRightOf="@+id/ImgInmo3"
+                android:layout_toEndOf="@+id/ImgInmo3"
+                android:layout_marginLeft="28dp"
+                android:layout_marginStart="28dp" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/TlfInmo3"
+                android:text="93-879-63-65"
+
+                android:layout_alignBaseline="@+id/LinkTerceraInmo"
+                android:layout_alignBottom="@+id/LinkTerceraInmo"
+                android:layout_alignLeft="@+id/TlfInmo2"
+                android:layout_alignStart="@+id/TlfInmo2" />
+            <ImageView
+                android:layout_below="@+id/ImgInmo3"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:id="@+id/ImgInmo4"
+                android:layout_marginTop="10dp"
+                android:layout_marginLeft="20dp"
+                />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/LinkQuartaInmo"
+                android:text="INTEcat"
+
+                android:layout_marginBottom="30dp"
+                android:layout_alignBottom="@+id/ImgInmo4"
+                android:layout_toRightOf="@+id/ImgInmo4"
+                android:layout_toEndOf="@+id/ImgInmo4"
+                android:layout_marginLeft="28dp"
+                android:layout_marginStart="28dp" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/TlfInmo4"
+                android:text="93-159-54-23"
+
+                android:layout_alignBaseline="@+id/LinkQuartaInmo"
+                android:layout_alignBottom="@+id/LinkQuartaInmo"
+                android:layout_alignLeft="@+id/TlfInmo3"
+                android:layout_alignStart="@+id/TlfInmo3" />
+            <ImageView
+                android:layout_below="@+id/ImgInmo4"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:id="@+id/ImgInmo5"
+                android:layout_marginTop="20dp"
+                android:layout_marginLeft="20dp"
+                />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/LinkCinquenaInmo"
+                android:text="Més que Mascotes"
+
+                android:layout_marginBottom="30dp"
+                android:layout_alignBottom="@+id/ImgInmo5"
+                android:layout_toRightOf="@+id/ImgInmo5"
+                android:layout_toEndOf="@+id/ImgInmo5"
+                android:layout_marginLeft="28dp"
+                android:layout_marginStart="28dp" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/TlfInmo5"
+                android:text="93-849-21-86"
+
+                android:layout_alignBaseline="@+id/LinkCinquenaInmo"
+                android:layout_alignBottom="@+id/LinkCinquenaInmo"
+                android:layout_alignLeft="@+id/TlfInmo4"
+                android:layout_alignStart="@+id/TlfInmo4" />
+        </RelativeLayout>
+    </ScrollView>
+</FrameLayout>
