--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,9 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:gravity="center"
     android:background="@drawable/fondo"
+    android:gravity="center"
+    android:orientation="vertical"
     tools:context="com.example.adri.projectegithub.MainActivity">
 
     <LinearLayout
@@ -18,19 +18,18 @@
             android:id="@+id/imageView1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_margin="10dp"
             android:layout_weight="0.19"
             android:src="@drawable/restaurants"
-            android:layout_margin="10dp"/>
+           />
 
         <ImageView
             android:id="@+id/imageView2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="0.19"
-            app:srcCompat="@drawable/business"
             android:layout_margin="10dp"
-            />
-
+            android:layout_weight="0.19"
+            app:srcCompat="@drawable/business" />
     </LinearLayout>
 
 
@@ -43,17 +42,17 @@
             android:id="@+id/imageView3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_margin="10dp"
             android:layout_weight="0.19"
-            app:srcCompat="@drawable/movies"
-            android:layout_margin="10dp"/>
+            app:srcCompat="@drawable/movies" />
 
         <ImageView
             android:id="@+id/imageView4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_margin="10dp"
             android:layout_weight="0.19"
-            app:srcCompat="@drawable/weather"
-            android:layout_margin="10dp"/>
+            app:srcCompat="@drawable/weather" />
     </LinearLayout>
 
     <LinearLayout
@@ -65,17 +64,18 @@
             android:id="@+id/imageView5"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_margin="10dp"
             android:layout_weight="0.19"
-            app:srcCompat="@drawable/events"
-            android:layout_margin="10dp"/>
+            app:srcCompat="@drawable/events" />
 
         <ImageView
             android:id="@+id/imageView6"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_margin="10dp"
             android:layout_weight="0.19"
             app:srcCompat="@drawable/hotels"
-            android:layout_margin="10dp"/>
+            android:onClick="hotels"/>
     </LinearLayout>
 
 </LinearLayout>
