--- a/app/src/main/res/layout/activity_business__botigues.xml
+++ b/app/src/main/res/layout/activity_business__botigues.xml
@@ -8,7 +8,8 @@
 
     <ImageView
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:src="@drawable/fonsbusiness"/>
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -20,6 +21,7 @@
             <Button
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+
                 android:id="@+id/Back"/>
             <TextView
                 android:layout_width="wrap_content"
