--- a/app/src/main/res/layout/activity__restaurant.xml
+++ b/app/src/main/res/layout/activity__restaurant.xml
@@ -10,20 +10,54 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
-        <ImageView
-            android:id="@+id/imageView8"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:src="@drawable/rest_el_celler_de_jabugo"
-            />
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical">
+            <ImageView
+                android:id="@+id/img_jabugo"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:src="@drawable/rest_el_celler_de_jabugo" />
 
-
+            <RatingBar
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1" />
         </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <ImageButton
+                    android:id="@+id/web_jabugo"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/webico" />
+
+                <ImageButton
+                    android:id="@+id/tlf_jabugo"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/tlfico" />
+
+            </LinearLayout>
+
+            <TextView
+                android:id="@+id/tx_valoracion"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Valoracion: 0"
+                android:textAppearance="@style/TextAppearance.AppCompat.Title" />
+        </LinearLayout>
+
     </LinearLayout>
 
 </LinearLayout>
