--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -76,8 +76,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="0.19"
             app:srcCompat="@drawable/hotels"
-            android:layout_margin="10dp"
-            android:onClick="hotels"/>
+            android:layout_margin="10dp" />
     </LinearLayout>
 
 </LinearLayout>
