--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,8 +28,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="0.19"
-            app:srcCompat="@drawable/business"
+            android:src="@drawable/business"
             android:layout_margin="10dp"
+            android:onClick="gotobusiness"
             />
 
     </LinearLayout>
@@ -75,7 +76,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="0.19"
-            app:srcCompat="@drawable/hotels"
+            android:src="@drawable/hotels"
             android:layout_margin="10dp"/>
     </LinearLayout>
 
