--- a/app/src/main/res/layout/activity_hotel.xml
+++ b/app/src/main/res/layout/activity_hotel.xml
@@ -70,8 +70,9 @@
                         android:id="@+id/ratingBar"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:isIndicator="false" />
+                        android:layout_weight="1.0"
+                        android:isIndicator="false"
+                        android:stepSize="1.0"/>
 
             </LinearLayout>
         </LinearLayout>
