--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,19 +18,17 @@
             android:id="@+id/imageView1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="0.19"
-            android:src="@drawable/restaurants"
             android:layout_margin="10dp"
-            android:onClick="gotoresta"/>
+            android:layout_weight="0.19"
+            android:src="@drawable/restaurants" />
 
         <ImageView
             android:id="@+id/imageView2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="0.19"
-            app:srcCompat="@drawable/business"
             android:layout_margin="10dp"
-            />
+            android:layout_weight="0.19"
+            app:srcCompat="@drawable/business" />
 
     </LinearLayout>
 
